fix: test add avatar

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
       <artifactId>reportng</artifactId>
       <version>LATEST</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>LATEST</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
